--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
     "express": "https://aistudiocdn.com/express@^5.1.0",
     "path": "https://aistudiocdn.com/path@^0.12.7",
-    "url": "https://aistudiocdn.com/url@^0.11.4"
+    "url": "https://aistudiocdn.com/url@^0.11.4",
+    "node-fetch": "https://aistudiocdn.com/node-fetch@^3.3.2"
   }
 }
 </script>
