feat: Integrate Leaflet-Geoman for map drawing
Adds Leaflet-Geoman to the project, enabling users to draw shapes (polygons, circles, etc.) directly on the map. This enhances the operational planning and visualization capabilities within the application.

Also includes:
- Offline creation fallback for `base44Client`.
- Realtime conflict monitoring for the Dashboard.
- UI improvements and new icons across various pages.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
@@ -28,6 +29,7 @@
       }
     </script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+    <link rel="stylesheet" href="https://unpkg.com/@geoman-io/leaflet-geoman-free@2.18.3/dist/leaflet-geoman.css" />
     <style>
       ::-webkit-scrollbar { width: 8px; height: 8px; }
       ::-webkit-scrollbar-track { background: #f1f5f9; }
@@ -61,7 +63,9 @@
     "express": "https://aistudiocdn.com/express@^5.1.0",
     "path": "https://aistudiocdn.com/path@^0.12.7",
     "url": "https://aistudiocdn.com/url@^0.11.4",
-    "node-fetch": "https://aistudiocdn.com/node-fetch@^3.3.2"
+    "node-fetch": "https://aistudiocdn.com/node-fetch@^3.3.2",
+    "@geoman-io/leaflet-geoman-free/": "https://aistudiocdn.com/@geoman-io/leaflet-geoman-free@^2.18.3/",
+    "@geoman-io/leaflet-geoman-free": "https://aistudiocdn.com/@geoman-io/leaflet-geoman-free@^2.18.3"
   }
 }
 </script>
