feat: Refactor UI and improve map controls
- Update background colors and font styles for a cleaner aesthetic.
- Enhance map controls with geolocalization features and improved responsiveness.
- Refine UI components and layouts for better user experience across different screen sizes.
- Improve the animation and visual feedback for map elements and UI interactions.
- Introduce new icons for enhanced clarity in operational management and pilot management modules.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       img:not([src]):not([srcset]) { visibility: hidden; }  
       .animate-fade-in { animation: fadeIn 0.3s ease-out; }
       @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
-      body { background-color: #f8fafc; color: #1e293b; -webkit-font-smoothing: antialiased; }
+      body { background-color: #ffffff; color: #1e293b; -webkit-font-smoothing: antialiased; }
     </style>
   <script type="importmap">
 {
