feat(SYSARP-v.2.0): Update dependencies and assets
Updates project dependencies to newer versions and refreshes static assets, including the README and application metadata. This ensures compatibility and incorporates the latest features and bug fixes.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>SYSARP - Corpo de Bombeiros</title>
+    <title>SYSARP - Corpo de BomBEIROS</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -67,11 +67,11 @@
     "html2canvas": "https://esm.sh/html2canvas@1.4.1",
     "vite": "https://aistudiocdn.com/vite@^5.2.0",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^4.2.1",
-    "express": "https://aistudiocdn.com/express@^4.18.2",
-    "path": "https://aistudiocdn.com/path@^0.12.7",
-    "url": "https://aistudiocdn.com/url@^0.11.4",
-    "node-fetch": "https://aistudiocdn.com/node-fetch@^3.3.2",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "express": "https://esm.sh/express@^5.2.1",
+    "path": "https://esm.sh/path@^0.12.7",
+    "url": "https://esm.sh/url@^0.11.4",
+    "node-fetch": "https://esm.sh/node-fetch@^3.3.2"
   }
 }
 </script>
